(env
 (dev
  (flags
   (:standard -w -32-35-27-33-26-64)))
 (release
  (flags
   (:standard -w -32-35-27-33-26-64))
  (ocamlopt_flags
   (:standard -unsafe -noassert -inline 100))))

(library
 (public_name haft.ast)
 (name ast)
 (wrapped true)
 (modules
   parseTree
   map
   fv
   subst
   ast
   astHelper
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv ppx_inline_test ppx_assert ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_here))
 (libraries zutils AutomataLibrary spectrum))
