(library
 (public_name haft.codegen)
 (name codegen)
 (wrapped true)
 (modules
   common
   prop_gen
   gen_gen
   gen
   ; ast
   ; astbuilder
   ; fromTerm
   ; opt
   codegen
   ; toplang
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv ppx_inline_test ppx_assert ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_here))
 (libraries zutils language))
