(library
 (name typectx)
 (public_name zutils.typectx)
 (wrapped true)
 (modules_without_implementation)
 (libraries sugar core myconfig)
 (modules
   typectx
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv ppx_inline_test ppx_assert ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_here))
 (inline_tests)
)
