(library
 (name zdatatype)
 (public_name zutils.zdatatype)
 (libraries core)
 (modules
   zarray
   zlabeled_tree
   zlist
   zmap
   zset
   ztree
   ztailcall
   zbinomialhp
   zpairinghp
   zphysicistsq
   zrealtimeq
   zskewhp
   zdatatype
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv))
)
